--- a/micro-web/src/main/resources/templates/common/_temp.html
+++ b/micro-web/src/main/resources/templates/common/_temp.html
@@ -99,6 +99,7 @@
 
 
 
+
     </style>
 </head>
 <body>
@@ -124,23 +125,13 @@
     <script type="text/javascript">
             $('.bs-component [data-toggle="popover"]').popover();
             $('.bs-component [data-toggle="tooltip"]').tooltip();
-
-
-
-
-
-
-
-
-
-
     </script>
 </div>
 <div class="container">
     <div th:fragment="nav" 　class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a href="/top" class="navbar-brand">数独</a>
+                <a href="./top" class="navbar-brand">数独</a>
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                     <span class="icon-bar">作成</span>
                     <span class="icon-bar">遊ぶ</span>
@@ -151,11 +142,11 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
-                    <li><a href="/createAnswer">作成</a></li>
-                    <li><a href="/createQuestion">遊ぶ</a></li>
-                    <li><a href="/searchAnswer">検索</a></li>
-                    <li><a href="/introduce">紹介</a></li>
-                    <li><a href="/linkList">ACTOR</a></li>
+                    <li><a href="./createAnswer">作成</a></li>
+                    <li><a href="./createQuestion">遊ぶ</a></li>
+                    <li><a href="./searchAnswer">検索</a></li>
+                    <li><a href="./introduce">紹介</a></li>
+                    <li><a href="./linkList">ACTOR</a></li>
                 </ul>
             </div>
         </div>
