--- a/micro-web/src/main/resources/templates/linkList.html
+++ b/micro-web/src/main/resources/templates/linkList.html
@@ -56,6 +56,11 @@
                 </a>
                 <a charset="UTF-8" hreflang="ja"
                    href="linkList.html"
+                   th:href="@{/auditevents}">
+                    auditevents
+                </a>
+                <a charset="UTF-8" hreflang="ja"
+                   href="linkList.html"
                    th:href="@{/beans}">
                     beans
                 </a>
@@ -76,8 +81,18 @@
                 </a>
                 <a charset="UTF-8" hreflang="ja"
                    href="linkList.html"
+                   th:href="@{/heapdump}">
+                    heapdump
+                </a>
+                <a charset="UTF-8" hreflang="ja"
+                   href="linkList.html"
                    th:href="@{/health}">
                     health
+                </a>
+                <a charset="UTF-8" hreflang="ja"
+                   href="linkList.html"
+                   th:href="@{/loggers}">
+                    loggers
                 </a>
                 <a charset="UTF-8" hreflang="ja"
                    href="linkList.html"
