messageの外部化を一部実施

--- a/micro-web/src/main/resources/templates/bestScore.html
+++ b/micro-web/src/main/resources/templates/bestScore.html
@@ -51,7 +51,8 @@
         </div>
         <div class="col-lg-12">
             <div class="well bs-component">
-                <form class="form-horizontal" id="scoreForm" method="post" action="#" th:action="@{/bestScore}"
+                <form class="form-horizontal" id="scoreForm" method="post" action="#"
+                      th:action="@{/bestScore}"
                       th:object="${scoreForm}" autocomplete="off" data-toggle="validator">
                     <fieldset>
                         <div class="form-group">
@@ -59,8 +60,10 @@
                                 <ul class="breadcrumb">
                                     <li th:text="'スコア:'+${scoreForm.score}+'点'">スコア:2000点</li>
                                     <li th:text="'カウント:'+${scoreForm.count}+'回'">カウント:1回</li>
-                                    <input type="hidden" th:id="score" th:name="score" th:value="*{score}"/>
-                                    <input type="hidden" th:id="count" th:name="count" th:value="*{count}"/>
+                                    <input type="hidden" th:id="score" th:name="score"
+                                           th:value="*{score}"/>
+                                    <input type="hidden" th:id="count" th:name="count"
+                                           th:value="*{count}"/>
                                 </ul>
                             </div>
                         </div>
@@ -77,8 +80,10 @@
                                     <input type="text" class="form-control" id="name" th:name="name"
                                            maxlength="64"
                                            th:field="*{name}" placeholder="Nameを入力してください。"
-                                           pattern="[^\x22\x27]*" data-error="nameに不要な記号が入力されています。" required/>
-                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="help-block">error!</span>
+                                           pattern="[^\x22\x27]*" data-error="Nameに不要な記号が入力されています。"
+                                           th:data-error="#{name.input.error}" required/>
+                                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                                          class="help-block">error!</span>
                                     <div class="help-block with-errors"></div>
                                 </div>
                                 <div class="col-lg-2"></div>
@@ -90,8 +95,10 @@
                                     <input type="text" class="form-control" id="memo" th:name="memo"
                                            maxlength="64"
                                            th:field="*{memo}" placeholder="Memoを入力してください。"
-                                           pattern="[^\x22\x27]*" data-error="Memoに不要な記号が入力されています。"/>
-                                    <span th:if="${#fields.hasErrors('memo')}" th:errors="*{memo}" class="help-block">error!</span>
+                                           pattern="[^\x22\x27]*" data-error="Memoに不要な記号が入力されています。"
+                                           th:data-error="#{memo.input.error}"/>
+                                    <span th:if="${#fields.hasErrors('memo')}" th:errors="*{memo}"
+                                          class="help-block">error!</span>
                                     <div class="help-block with-errors"></div>
                                 </div>
                                 <div class="col-lg-2"></div>
@@ -99,10 +106,14 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-8 col-lg-offset-4">
-                                <input type="hidden" th:id="type" th:name="type" th:value="*{type}"/>
-                                <input type="hidden" th:id="keyHash" th:name="keyHash" th:value="*{keyHash}"/>
-                                <button type="reset" class="btn btn-default">キャンセル</button>
-                                <button type="submit" class="btn btn-primary">レジスト</button>
+                                <input type="hidden" th:id="type" th:name="type"
+                                       th:value="*{type}"/>
+                                <input type="hidden" th:id="keyHash" th:name="keyHash"
+                                       th:value="*{keyHash}"/>
+                                <button type="reset" id="reset" class="btn btn-default">キャンセル
+                                </button>
+                                <button type="submit" id="submit" class="btn btn-primary">レジスト
+                                </button>
                             </div>
                         </div>
                     </fieldset>
