--- a/micro-web/src/main/resources/templates/choiceQuestion.html
+++ b/micro-web/src/main/resources/templates/choiceQuestion.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css"
           href="../static/css/bootstrap.css"
           th:href="@{/css/bootstrap.css}"/>
+
     <!-- bootstrap-datepicker -->
     <link rel="stylesheet" type="text/css"
           href="../static/css/bootstrap-datepicker.min.css"
@@ -57,8 +58,10 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-10 col-lg-offset-2">
-                                <button type="reset" class="btn btn-default">キャンセル</button>
-                                <button type="submit" class="btn btn-primary">エンター</button>
+                                <button type="reset" id="reset" class="btn btn-default">キャンセル
+                                </button>
+                                <button type="submit" id="submit" class="btn btn-primary">エンター
+                                </button>
                             </div>
                         </div>
                     </fieldset>
@@ -70,13 +73,6 @@
                         $("#select").css("color","red");
                     });
                 });
-
-
-
-
-
-
-
             </script>
         </div>
     </div>
