--- a/micro-web/src/main/resources/templates/common/_temp.html
+++ b/micro-web/src/main/resources/templates/common/_temp.html
@@ -34,71 +34,61 @@
     <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style type="text/css" th:fragment="css">
-          body {
-            padding-top: 80px;
+      body {
+        padding-top: 80px;
+      }
+
+      @media(min-width: 768px) {
+        #banner {
+          min-height: 300px;
+          border-bottom: none;
         }
-
-        @media ( min-width: 768px) {
-            #banner {
-                min-height: 300px;
-                border-bottom: none;
-            }
-            .bs-docs-section {
-                margin-top: 8em;
-            }
-            .bs-component {
-                position: relative;
-            }
-            .bs-component .modal {
-                position: relative;
-                top: auto;
-                right: auto;
-                left: auto;
-                bottom: auto;
-                z-index: 1;
-                display: block;
-            }
-            .bs-component .modal-dialog {
-                width: 90%;
-            }
-            .bs-component .popover {
-                position: relative;
-                display: inline-block;
-                width: 220px;
-                margin: 20px;
-            }
-            .nav-tabs {
-                margin-bottom: 15px;
-            }
-            .progress {
-                margin-bottom: 10px;
-            }
+        .bs-docs-section {
+          margin-top: 8em;
         }
-        .table > thead > tr > td.successLock,
-        .table > thead > tr > th.successLock,
-        .table > thead > tr.successLock > td,
-        .table > thead > tr.successLock > th,
-        .table > tbody > tr > td.successLock,
-        .table > tbody > tr > th.successLock,
-        .table > tbody > tr.successLock > td,
-        .table > tbody > tr.successLock > th {
-          background-color: aliceblue;
-          color: deeppink;
+        .bs-component {
+          position: relative;
         }
-        .hover{
-            background:#B2D8FF;
-}       }
-
-
-
-
-
-
-
-
-
-
-
+        .bs-component .modal {
+          position: relative;
+          top: auto;
+          right: auto;
+          left: auto;
+          bottom: auto;
+          z-index: 1;
+          display: block;
+        }
+        .bs-component .modal-dialog {
+          width: 90%;
+        }
+        .bs-component .popover {
+          position: relative;
+          display: inline-block;
+          width: 220px;
+          margin: 20px;
+        }
+        .nav-tabs {
+          margin-bottom: 15px;
+        }
+        .progress {
+          margin-bottom: 10px;
+        }
+      }
+      .table > thead > tr > td.successLock,
+      .table > thead > tr > th.successLock,
+      .table > thead > tr.successLock > td,
+      .table > thead > tr.successLock > th,
+      .table > tbody > tr > td.successLock,
+      .table > tbody > tr > th.successLock,
+      .table > tbody > tr.successLock > td,
+      .table > tbody > tr.successLock > th {
+        background-color: aliceblue;
+        color: deeppink;
+      }
+      .hover {
+        background: #B2D8FF;
+      }
+    }
 
     </style>
 </head>
@@ -125,6 +115,7 @@
     <script type="text/javascript">
             $('.bs-component [data-toggle="popover"]').popover();
             $('.bs-component [data-toggle="tooltip"]').tooltip();
+
     </script>
 </div>
 <div class="container">
@@ -132,7 +123,8 @@
         <div class="container">
             <div class="navbar-header">
                 <a href="./top" class="navbar-brand">数独</a>
-                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                <button class="navbar-toggle" type="button" data-toggle="collapse"
+                        data-target="#navbar-main">
                     <span class="icon-bar">作成</span>
                     <span class="icon-bar">遊ぶ</span>
                     <span class="icon-bar">検索</span>
@@ -154,5 +146,4 @@
 </div>
 <footer th:fragment="footer"></footer>
 </body>
-
 </html>
