--- a/micro-web/src/main/resources/templates/searchAnswer.html
+++ b/micro-web/src/main/resources/templates/searchAnswer.html
@@ -58,7 +58,9 @@
                             <label for="selectType" class="col-lg-2 control-label">タイプ</label>
                             <div class="col-lg-4">
                                 <select class="form-control" id="selectType" th:name="selectType"
-                                        data-error="セレクトボックスは必須選択です。" required>
+                                        data-error="セレクトボックスは必須選択です。"
+                                        th:data-error="#{selectType.input.required}"
+                                        required>
                                     <option value="">---</option>
                                     <option th:each="type : ${selectTypes}"
                                             th:text="${type.key}"
@@ -78,15 +80,19 @@
                             <label class="col-lg-2 control-label" for="no">No</label>
                             <div class="col-lg-4">
                                 <input type="number" class="form-control" id="no" th:name="no"
-                                       min="0" max="9999999999" data-error="noは半角数字のみです。" step="1"
-                                       th:field="*{no}" placeholder="Noを入力してください。"/>
+                                       min="0" max="9999999999" step="1"
+                                       th:field="*{no}" placeholder="Noを入力してください。"
+                                       data-error="Noは半角数字のみです。"
+                                       th:data-error="#{no.input.error}"/>
                                 <span th:if="${#fields.hasErrors('no')}" class="help-block"
                                       th:errors="*{no}">error!</span>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="col-lg-2">
                                 <select class="form-control" th:id="selectorNo" th:name="selectorNo"
-                                        data-error="特に不要であれば初期値を選択してください" required>
+                                        data-error="特に不要であれば初期値を選択してください。"
+                                        th:data-error="#{selectorNo.input.required}"
+                                        required>
                                     <option value="0">---</option>
                                     <option th:each="noCompare : ${selectorNo}"
                                             th:text="${noCompare.key}"
@@ -107,14 +113,18 @@
                             <div class="col-lg-4">
                                 <input type="search" class="form-control" id="keyHash" th:name="keyHash"
                                        maxlength="64"
-                                       th:field="*{keyHash}" placeholder="keyHashを入力してください。"
-                                       pattern="[a-zA-Z0-9]{1,64}" data-error="keyHashは半角英数字のみです。"/>
+                                       th:field="*{keyHash}" placeholder="KeyHashを入力してください。"
+                                       pattern="[a-zA-Z0-9]{1,64}"
+                                       data-error="KeyHashは半角英数字のみです。"
+                                       th:data-error="#{keyHash.input.error}"/>
                                 <span th:if="${#fields.hasErrors('keyHash')}" class="help-block" th:errors="*{keyHash}">error!</span>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="col-lg-2">
                                 <select class="form-control" th:id="selectorKeyHash" th:name="selectorKeyHash"
-                                        data-error="特に不要であれば初期値を選択してください" required>
+                                        data-error="特に不要であれば初期値を選択してください"
+                                        th:data-error="#{selectorKeyHash.input.required}"
+                                        required>
                                     <option value="0">---</option>
                                     <option th:each="keyHashCompare : ${selectorKeyHash}"
                                             th:text="${keyHashCompare.key}"
@@ -136,13 +146,16 @@
                                        min="0"
                                        max="9999999" step="1"
                                        th:field="*{score}" placeholder="Scoreを入力してください。"
-                                       data-error="noは半角数字のみです。"/>
+                                       data-error="Scoreは半角数字のみです。"
+                                       th:data-error="#{score.input.error}"/>
                                 <span th:if="${#fields.hasErrors('score')}" class="help-block" th:errors="*{score}">error!</span>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="col-lg-2">
                                 <select class="form-control" th:id="selectorScore" th:name="selectorScore"
-                                        data-error="特に不要であれば初期値を選択してください" required>
+                                        data-error="特に不要であれば初期値を選択してください"
+                                        th:data-error="#{selectorScore.input.required}"
+                                        required>
                                     <option value="0">---</option>
                                     <option th:each="scoreCompare : ${selectorScore}"
                                             th:text="${scoreCompare.key}"
@@ -163,14 +176,18 @@
                                 <input type="search" class="form-control" id="name" th:name="name"
                                        maxlength="64"
                                        th:field="*{name}" placeholder="Nameを入力してください。"
-                                       pattern="[^\x22\x27]*" data-error="nameに不要な記号が入力されています。"/>
+                                       pattern="[^\x22\x27]*"
+                                       data-error="Nameに不要な記号が入力されています。"
+                                       th:data-error="#{name.input.error}"/>
                                 <span th:if="${#fields.hasErrors('name')}" class="help-block"
                                       th:errors="*{name}">error!</span>
                                 <div class="help-block with-errors"></div>
                             </div>
                             <div class="col-lg-2">
                                 <select id="selectorName" class="form-control" name="selectorName"
-                                        data-error="特に不要であれば初期値を選択してください" required>
+                                        data-error="特に不要であれば初期値を選択してください"
+                                        th:data-error="#{selectorName.input.required}"
+                                        required>
                                     <option value="0">---</option>
                                     <option th:each="nameCompare : ${selectorName}"
                                             th:text="${nameCompare.key}" th:value="${nameCompare.value}"
@@ -206,8 +223,10 @@
                             <div class="col-lg-8 col-lg-offset-4">
                                 <input type="hidden" th:id="pageNumber" th:name="pageNumber" value="0"/>
                                 <input type="hidden" th:id="pageSize" th:name="pageSize" value="10"/>
-                                <button type="reset" class="btn btn-warning">リセット</button>
-                                <button type="submit" class="btn btn-success">サーチ！</button>
+                                <button type="reset" id="reset" class="btn btn-warning">リセット
+                                </button>
+                                <button type="submit" id="submit" class="btn btn-success">サーチ！
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -216,8 +235,9 @@
         </div>
         <div th:replace="./common/_SearchList :: base"/>
         <script type="text/javascript">
+        /*<![CDATA[*/
             $('#selectType').tooltip({
-                title: '数独のタイプ種別を選択します。'
+                title: [[ #{selectType.default.message} ]]
             }).on({
                 "hide.bs.tooltip": function() {
                 if ($(this).is(":focus")) return false;
@@ -246,15 +266,7 @@
                     dates . not( this ) . datepicker( 'option', option, date );
                 }
             });
-
-
-
-
-
-
-
-
-
+        /*]]>*/
         </script>
     </div>
 </div>
